# projects

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml  resume-pipeline-app-AutoDeployTrigger-edbe0830-9548-4520-a833-b3de94dba416.yml
about/: cover_letter_template.txt
cover_letter/: README.md  cover_letter_builder.ipynb  cover_letter_builder.py
cover_letter/about/: summary.txt
resume/: README.md  cover_letter.py  job_processor.py  latex_generator.py  main.py  models.py  question_answerer.py  resume.py  resume_builder.ipynb  resume_builder.py  utils.py
resume/resources/: app_config.json  cover_letter_template.txt  line_estimates.json  resume_layout.json
resume/resourses_public/: projects.txt
src/: ai_client.py  cover_letter.py  job_processor.py  main.py  models.py  question_answerer.py  resume.py  utils.py
src/frontend/: app.js  index.html  style.css
src/resources/: app_config.json  app_config_example.json  line_estimates.json  resume_template.tex
src/you/: candidate_CS.json  candidate_TR.json  personal_summary_CS.json  personal_summary_TR.json
